# clinic

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  compose_prod.yaml  compose_tests.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  query.sql
app/: config.py  custom_uvicorn.py  exceptions.py  logger.py  main.py
app/common/: exceptions.py  handler.py
app/controllers/: appointments.py  auth.py  pages.py  patients.py  pneumonia.py  users.py
app/lang/: translator.py
app/lang/en-US/: appointments.json  header.json  login.json  page_not_found.json  personal_data.json  registration.json
app/lang/ru-RU/: appointments.json  header.json  login.json  page_not_found.json  personal_data.json  registration.json
app/lang/sv-SV/: header.json  login.json  registration.json
app/middlewares/: i18n.py  logging.py
app/migrations/: env.py  triggers.py
app/migrations/versions/: 08da6f577276_init.py  10a8b1ff70c9_init.py  1a3f5b653eb0_add_trigger.py  22fd16dd0dfb_init.py  491213459069_init.py  87e10d796707_init.py  9f2b8e06ee10_init.py  a43a303bc9a6_added_user_info.py  ab6556a19814_init.py  d61d9eb37174_add_trigger.py  fdc0cc7eb447_init.py
app/models/: appointments.py  common.py  doctors.py  patients.py  pheumonia.py  pneumonia.py  roles.py  schedule.py  treatments.py  users.py
app/models/users/: doctors.py  patients.py  personal_data.py  roles.py  users.py
app/services/: base_dao.py  database.py
app/services/appointments/: dao.py  dependencies.py  schemas.py
app/services/dao/: base.py
app/services/doctors/: dao.py  schemas.py
app/services/patients/: dao.py  dependencies.py  schemas.py
app/services/pneumonia/: dao.py
app/services/schedule/: dao.py  (+1 more)
app/tasks/: celery_app.py  scheduled.py
app/tests/: conftest.py  mock_appointments.json  mock_doctors.json  mock_patients.json  mock_personal_data.json  mock_roles.json  mock_users.json
setup/: clinic.Dockerfile  init.sql
setup/scripts/: app.bash  app.sh  celery.bash  init_db.py
(+42 files in other folders)
