[tool.poetry]
name = "pneumonia"
version = "0.1.0"
description = ""
authors = ["Mikhail Drozdov <deathlokmike@gmail.com>, Daniil Minoransky <some@some.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
