[tool.poetry]
name = "pneumonia"
version = "0.1.0"
description = ""
authors = ["Mikhail Drozdov <deathlokmike@gmail.com>, Daniil Minoransky <some@some.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
alembic = "^1.12.0"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
