[tool.poetry]
name = "app"
version = "0.1.1"
description = "This is a demo clinic designed for testing and practicing development for FastAPI"
authors = ["Mikhail Drozdov <deathlokmike@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
email-validator = "^2.1.0.post1"
jinja2 = "^3.1.2"
bcrypt = "^4.1.1"
prometheus-fastapi-instrumentator = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.13.0"
pytest-asyncio = "^0.23.2"


[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[tool.pyright]
venv="app-Bp_qAgfN-py3.11"
venvPath="/Users/linearlys/Library/Caches/pypoetry/virtualenvs/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
